<resources>
    <string name="app_name">AudioHelper</string>
    <string name="btn_text_start">Start playing audio</string>
    <string name="crossfade_activity_name_of_the_first_song">Name of the first song</string>
    <string name="crossfade_activity_name_of_the_second_song">Name of the second song</string>
    <string name="crossfade_activity_btn_choose_first_song">Choose the first song</string>
    <string name="crossfade_activity_btn_choose_second_song">Choose the second song</string>
    <string name="crossfade_activity_tv_choose_crossfade_duration">Choose crossfade duration</string>
    <string name="crossfade_activity_tv_crossfade_duration">2 seconds</string>

    <string name="text_family">monospace</string>
</resources>
