<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--android:paddingTop = "@dimen/audio_crossfade_activity_images_top_padding"
                    android:paddingBottom="@dimen/audio_crossfade_activity_images_bottom_padding"
                    android:paddingStart="@dimen/audio_crossfade_activity_images_left_padding"
                    android:paddingEnd="@dimen/audio_crossfade_activity_images_right_padding"
                    -->
    <ImageView
        android:id="@+id/iv_audio_crossfade_activity_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background" />

    <ScrollView
        android:id="@+id/sv_crossfade_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/main_contaiter_crossfade_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Names for the first/second songs -->
            <LinearLayout
                android:id="@+id/container_for_songs_names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_first_song_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/layout_weight"
                    android:background="@drawable/tv_song_name_style"
                    android:padding="@dimen/tv_songs_names_padding"
                    android:layout_margin="@dimen/tv_songs_names_margin"
                    android:scaleType="fitEnd"
                    android:text="@string/crossfade_activity_name_of_the_first_song"
                    android:textAlignment="center"
                    android:textColor="@color/color_white"
                    android:fontFamily="@string/text_family"
                    android:textSize="@dimen/tv_songs_names_text_size"
                    android:visibility="invisible"
                    />

                <TextView
                    android:id="@+id/tv_second_song_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/layout_weight"
                    android:background="@drawable/tv_song_name_style"
                    android:padding="@dimen/tv_songs_names_padding"
                    android:layout_margin="@dimen/tv_songs_names_margin"
                    android:scaleType="fitEnd"
                    android:text="@string/crossfade_activity_name_of_the_second_song"
                    android:textAlignment="center"
                    android:textColor="@color/color_white"
                    android:fontFamily="@string/text_family"
                    android:textSize="@dimen/tv_songs_names_text_size"
                    android:visibility="invisible"
                    />

            </LinearLayout>

            <!-- At first, standart image for music, then after user choose,
             img of the song/album -->
            <LinearLayout
                android:id="@+id/container_for_song_imgs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/iv_standart_music_icon_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="@dimen/layout_weight"
                    android:layout_margin="@dimen/images_magrin"
                    android:maxHeight="200dp"
                    android:maxWidth="200dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/crossfade_activity_imgs_style"
                    android:src="@drawable/standart_music_icon" />

                <ImageView
                    android:id="@+id/iv_standart_music_icon_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="@dimen/layout_weight"
                    android:layout_margin="@dimen/images_magrin"
                    android:maxHeight="200dp"
                    android:maxWidth="200dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/crossfade_activity_imgs_style"
                    android:src="@drawable/standart_music_icon" />
            </LinearLayout>

            <!-- for top border
                if u can do it better, i'd be pleased to get the better solution-->
            <View
                android:id="@+id/top_border"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/color_black95" />

            <!-- ImageButtons for choosing songs +
            TextView, whitch one to choose first -->
            <LinearLayout
                android:id="@+id/container_for_songs_choose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/container_for_first_song_choose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/layout_weight"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/img_btn_choose_first_song"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:background="@null"
                        android:maxWidth="@dimen/choose_song_btn_image_max_width"
                        android:maxHeight="@dimen/chooe_song_btn_image_max_height"
                        android:scaleType="fitStart"
                        android:src="@drawable/choose_music_icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitEnd"
                        android:text="@string/crossfade_activity_btn_choose_first_song"
                        android:textAlignment="center"
                        android:textColor="@color/color_white"
                        android:fontFamily="@string/text_family"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_for_second_song_choose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/layout_weight"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/img_btn_choose_second_song"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:background="@null"
                        android:maxWidth="@dimen/choose_song_btn_image_max_width"
                        android:maxHeight="@dimen/chooe_song_btn_image_max_height"
                        android:scaleType="fitStart"
                        android:src="@drawable/choose_music_icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitEnd"
                        android:text="@string/crossfade_activity_btn_choose_second_song"
                        android:textAlignment="center"
                        android:textColor="@color/color_white"
                        android:fontFamily="@string/text_family"/>
                </LinearLayout>
            </LinearLayout>

            <!-- for top border
                if u can do it better, i'd be pleased to get the better solution-->
            <View
                android:id="@+id/bottom_border"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/color_black95"
                android:layout_marginTop="@dimen/images_magrin"/>

            <!--SeekBar + TextView with user choose + Image play-button -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="@dimen/layout_weight"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/tv_seekbar_container_top_margin"
                    android:layout_marginBottom="@dimen/tv_seekbar_container_bottom_margin"
                    android:text="@string/crossfade_activity_tv_choose_crossfade_duration"
                    android:textAlignment="center"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/tv_seekbar_container_text_size"
                    android:fontFamily="@string/text_family"

                    />

                <SeekBar
                    android:id="@+id/crossfade_seekbar"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/seekbar_background"
                    android:max="8"
                    android:progressDrawable="@drawable/seekbar_progress"
                    android:thumb="@drawable/seekbar_control_button" />

                <TextView
                    android:id="@+id/tv_current_seekbar_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/tv_seekbar_container_top_margin"
                    android:layout_marginBottom="@dimen/tv_seekbar_container_bottom_margin"
                    android:fontFamily="@string/text_family"
                    android:text="@string/crossfade_activity_tv_crossfade_duration"
                    android:textAlignment="center"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/tv_seekbar_container_text_size" />

                <LinearLayout
                    android:id="@+id/container_for_music_btns"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/img_btn_play_pause"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:background="@null"
                        android:maxWidth="@dimen/play_pause_btn_image_max_width"
                        android:maxHeight="@dimen/play_pause_btn_image_max_height"
                        android:scaleType="fitCenter"
                        />

                    <ImageButton
                        android:id="@+id/img_btn_stop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:background="@null"
                        android:maxWidth="@dimen/play_pause_btn_image_max_width"
                        android:maxHeight="@dimen/play_pause_btn_image_max_height"
                        android:scaleType= "fitCenter"
                        />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/img_btn_go_back_to_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="@dimen/btn_go_back_to_main_magrin_top"
                    android:background="@drawable/btn_arrowback_style"
                    android:maxWidth="@dimen/choose_song_btn_image_max_width"
                    android:maxHeight="@dimen/chooe_song_btn_image_max_height"
                    android:paddingStart="@dimen/btn_go_back_to_main_padding_end"
                    android:paddingEnd="@dimen/btn_go_back_to_main_padding_end"
                    android:scaleType="fitStart"
                    android:src="@drawable/crossfade_activity_arrowback" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>